--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
   </head>
   <body>
+    <audio src="./assets/test.mp3"></audio>
+    <audio src="./assets/sm64_mario_hoohoo.wav" class="jump-sound"></audio>
     <script src="js/constants.js"></script>
     <script src="js/Background.js"></script>
     <script src="js/Obstacle.js"></script>
