--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <audio src="./assets/test.mp3"></audio>
     <audio src="./assets/sm64_mario_hoohoo.wav" class="jump-sound"></audio>
+    <audio src="./assets//burn.wav" class="burn"></audio>
     <script src="js/constants.js"></script>
     <script src="js/Background.js"></script>
     <script src="js/Obstacle.js"></script>
