--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <audio src="./assets/test.mp3"></audio>
     <audio src="./assets/sm64_mario_hoohoo.wav" class="jump-sound"></audio>
     <audio src="./assets//burn.wav" class="burn"></audio>
-    <script src="js/constants.js"></script>
+    <script src="js/Constants.js"></script>
     <script src="js/Background.js"></script>
     <script src="js/Obstacle.js"></script>
     <script src="js/Player.js"></script>
     <script src="js/Game.js"></script>
-    <script src="main.js"></script>
+    <script src="./Main.js"></script>
   </body>
 </html>
