--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mario Game</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <audio src="./assets/test.mp3"></audio>
@@ -17,5 +18,14 @@
     <script src="./JS/player.js"></script>
     <script src="./JS/game.js"></script>
     <script src="./main.js"></script>
+    <button class="game-instructions">Game instructions</button>
+    <input
+      type="text"
+      readonly="readonly"
+      name="Score"
+      id=""
+      placeholder="SCORE"
+      class="score"
+    />
   </body>
 </html>
