--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       readonly="readonly"
       name="Score"
       id=""
-      placeholder="SCORE"
+      placeholder="STAR"
       class="score"
     />
   </body>
