--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
           type="text"
           readonly="readonly"
           name="Score"
-          id=""
-          placeholder="COLLECT THE STAR"
+          id="starCollected"
+          placeholder="COLLECT THE STAR ! ! !"
           class="score"
         />
       </div>
     </div>
     <audio src="./assets/test.mp3"></audio>
     <audio src="./assets/sm64_mario_hoohoo.wav" class="jump-sound"></audio>
-    <audio src="./assets//burn.wav" class="burn"></audio>
+    <audio src="./assets/burn.wav" class="burn"></audio>
+    <audio src="./assets/sm64_happy_message.wav" class="coin"></audio>
     <script src="./JS/constants.js"></script>
     <script src="./JS/background.js"></script>
     <script src="./JS/obstacle.js"></script>
