adjusted the canvas size

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="modal active" id="modal">
         <div class="modal-header">
-          <div class="title">Game Instructions</div>
+          <div class="title">GAME INSTRUCTIONS</div>
           <button data-close-button class="close-button">&times;</button>
         </div>
         <div class="modal-body">
@@ -36,10 +36,10 @@
       </div>
       <div id="overlay"></div>
       <div class="health">
-        <h5>HEALTH: <span></span></h5>
+        <h5 class="health-title">HEALTH: <span></span></h5>
       </div>
       <div class="jumps">
-        <h6>TOTAL JUMPS LEFT: <span></span></h6>
+        <h6 class="total-jumps">TOTAL JUMPS LEFT: <span></span></h6>
       </div>
       <div>
         <input
