added restart and gmae over

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li>Press RIGHT arrow to move right</li>
             <li>Press LEFT arrow to move left</li>
             <li>Press SPACEBAR to jump</li>
-            <li>Press F5 to restart the game</li>
+            <li>Click restart to start a new game!</li>
           </ul>
         </div>
       </div>
@@ -51,11 +51,16 @@
           class="score"
         />
       </div>
+      <div>
+        <button id="restart-game">Restart Game</button>
+      </div>
     </div>
     <audio src="./assets/test.mp3"></audio>
     <audio src="./assets/sm64_mario_hoohoo.wav" class="jump-sound"></audio>
     <audio src="./assets/burn.wav" class="burn"></audio>
     <audio src="./assets/sm64_happy_message.wav" class="coin"></audio>
+    <audio src="./assets/sm64_game_over.wav" class="game-over"></audio>
+    <audio src="./assets/sm64_mario_tired.wav" class="tired"></audio>
     <script src="./JS/constants.js"></script>
     <script src="./JS/background.js"></script>
     <script src="./JS/player.js"></script>
